--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ bin/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea
+.idea/workspace.xml
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
