--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bin/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+*.iml
 .idea
 .idea/workspace.xml
 # User-specific stuff
